--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <div class="container">
     <!-- Profile Image -->
-    <img src=""C:\Users\prane\Downloads\IMG-20250101-WA0014.jpg"" alt="Profile Photo" class="profile-photo" />
+    <img src=""IMG-20250101-WA0014.jpg"" alt="Profile Photo" class="profile-photo" />
 
     <!-- Name -->
     <h1>Sachin S</h1>
@@ -137,4 +137,5 @@
   </div>
 
 </body>
+
 </html>
